fixed gap

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -399,7 +399,7 @@ hr {
 }
 
 .slick-slide {
-    margin-right: 30px;
+    margin-right: 25px;
     margin-left: 5px;
 }
 
